Fix stage name alignement

--- a/src/js/components/StageColumn.scss
+++ b/src/js/components/StageColumn.scss
@@ -1,3 +1,7 @@
 .stage-column {
   width: 150px;
 }
+
+.stage-name {
+  height: 50px;
+}
