--- a/src/js/components/TimeColumn.scss
+++ b/src/js/components/TimeColumn.scss
@@ -1,8 +1,8 @@
 .time-column {
-  margin-top: 30px;
+  margin-top: 50px;
   margin-right: 10px;
 
   li {
-    line-height: 30px;
+    height: 30px;
   }
 }
